--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "제목을 지으라는데 이게 가장어려운듯"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "bhcha"
