--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "제목을 지으라는데 이게 가장어려운듯"
+title                    : "풀스텍아닌 잡부"
 title_separator          : "|"
 subtitle                 : "제목없음"
 name                     : "bhcha"
