--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "풀스텍아닌 잡부"
 title_separator          : "|"
-subtitle                 : "제목없음"
+subtitle                 : ""
 name                     : "bhcha"
 description              : ""
 url                      : "https://bhcha.github.io"
