--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "풀스텍과 잡부 그사이"
+title                    : "山만한 개발자"
 title_separator          : "|"
 subtitle                 : ""
 name                     : "bhcha"
