add naver search engine

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "1e6a366f4ba9432f76562f9a52beb5dd8609bfaf"
 yandex_site_verification :
 baidu_site_verification  :
 
