--- a/_config.yml
+++ b/_config.yml
@@ -291,3 +291,7 @@ defaults:
       show_date: true
 
 date_format: "%Y-%m-%d"
+
+after_footer_scripts:
+  - https://cdn.jsdelivr.net/npm/mermaid@9.4.3/dist/mermaid.min.js
+  - assets/js/mermaid.js
